# market-data-aggregator

./: .gitignore  Cargo.toml
src/: connector.rs  lib.rs  main.rs  model.rs
src/connector/: bybit.rs
src/model/: cup.rs  exchange_books.rs  normalized_update.rs  order_book.rs
